# ot.hs

./: ot.cabal  stack.yaml
src/Control/OperationalTransformation/: JSON.hs  Misc.hs  Properties.hs  Selection.hs  Server.hs  Text.hs  Text0.hs  other_text_tests.txt
src/Control/OperationalTransformation/JSON/: Affects.hs  Apply.hs  Compose.hs  Transform.hs  Types.hs  Util.hs
test/: Main.hs
test/Control/OperationalTransformation/: ClientServerTests.hs  CompositionTests.hs
test/Control/OperationalTransformation/JSON/: Gen.hs  QuasiQuote.hs  Specs.hs  Tests.hs
test/Control/OperationalTransformation/Selection/: Tests.hs
test/Control/OperationalTransformation/Text/: Gen.hs  Tests.hs
test/Control/OperationalTransformation/Text0/: Gen.hs  Specs.hs
