Name:                ot
Version:             0.2.1.0
Synopsis:            Real-time collaborative editing with Operational Transformation
Description:         OT is a technique to handle changes to a document in a setting where users are editing concurrently. This package implements operational transformation for simple plain text documents as well as server and client modules.
Homepage:            https://github.com/operational-transformation/ot.hs
License:             MIT
License-file:        LICENSE
Author:              Tim Baumann
Maintainer:          tim@timbaumann.info

Category:            Text
Build-type:          Simple

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:         >= 1.8

source-repository head
  type:     git
  location: https://github.com/Operational-Transformation/ot.hs.git

Library
  Ghc-options:         -Wall
  Hs-source-dirs:      src, test
  Exposed-modules:     Control.OperationalTransformation
                     , Control.OperationalTransformation.List
                     , Control.OperationalTransformation.Text
                     , Control.OperationalTransformation.Selection
                     , Control.OperationalTransformation.Properties
                     , Control.OperationalTransformation.Client
                     , Control.OperationalTransformation.Server
                     , Control.OperationalTransformation.JSON
                     , Control.OperationalTransformation.JSON.Transform
                     , Control.OperationalTransformation.JSON.Apply
                     , Control.OperationalTransformation.JSON.Compose
                     , Control.OperationalTransformation.JSON.Types
                     , Control.OperationalTransformation.JSON.Util
  Build-depends:       HUnit,
                       QuickCheck >= 2.7 && < 2.9,
                       aeson >= 0.7 && < 0.12,
                       aeson-pretty,
                       aeson-qq,
                       attoparsec >= 0.10.1.1 && < 1,
                       base >= 4 && < 5,
                       binary >= 0.5.1.1 && < 0.8,
                       bytestring >= 0.10.6.0,
                       containers >= 0.5.6.2,
                       convertible,
                       deepseq >= 1.4.1.1,
                       th-lift,
                       th-lift-instances,
                       either >= 4.1.2 && < 5,
                       ghc,
                       haskell-src-meta >= 0.6.0.11,
                       hspec,
                       hspec-expectations,
                       interpolate,
                       lens >= 4.12.3,
                       lens-aeson,
                       mtl >= 2.1.3.1 && < 3,
                       parsec >= 3.1.9,
                       safe >= 0.3.9,
                       scientific >= 0.3.4.2,
                       tasty,
                       tasty-hspec,
                       tasty-hunit,
                       tasty-quickcheck,
                       template-haskell >= 2.10.0.0,
                       text >= 1.0 && < 1.3,
                       unordered-containers >= 0.2.5.1,
                       vector >= 0.10.12.3

  -- Modules not exported by this package.
  -- Other-modules:

Test-suite tests
  Ghc-options:         -Wall -rtsopts
  Hs-source-dirs:      src, test
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  Build-depends:       HUnit,
                       HUnit,
                       QuickCheck,
                       aeson,
                       aeson-pretty,
                       aeson-qq,
                       base,
                       binary >= 0.5.1.0,
                       bytestring >= 0.10.6.0,
                       containers >= 0.5.6.2,
                       convertible,
                       deepseq >= 1.4.1.1,
                       th-lift,
                       th-lift-instances,
                       either >= 4.1.2 && < 5,
                       haskell-src-meta >= 0.6.0.11,
                       hspec,
                       hspec-expectations,
                       interpolate,
                       lens >= 4.12.3,
                       lens-aeson,
                       mtl >= 2.1.3.1 && < 3,
                       ot,
                       parsec >= 3.1.9,
                       safe >= 0.3.9,
                       scientific >= 0.3.4.2,
                       tasty,
                       tasty-hspec,
                       tasty-hunit,
                       tasty-quickcheck,
                       template-haskell >= 2.10.0.0,
                       text,
                       unordered-containers >= 0.2.5.1,
                       vector >= 0.10.12.3
